        * Use the CMake option -DSTRONG_TYPE_UNIT_TEST=yes to build unit tests

v7 2022-12-22

        * Added missing #include for <fmt/ostream.h>. Thank you Björn Schäpers

        * Fixed MSVC check (typo) for constexpr. Thank you Sergei Soloviev

        * Builds cleanly with -Wconversion

        * Strengthened the unit test suite and CI build structure

v6 2022-10-21

        * Added missing strong::is_ostreamable<> predicate needed for fmtlib 9.
          Thank you Tim Blechman @timblechmann for submitting the fix.

v5 2022-10-20

        * Fixed issue #22, a regression with strong::formattable and fmtlib.
          A type that is strong::ostreamable can be formatted with fmt. A
          type that is both strong::formattable and strong::ostreamable will
          use the type's formatter<> when using fmt. The behaviour of
          std::format is unchanged.

        * strong::arithmetic no longer specializes std::is_arithmetic<>. Issue
          #19. This is expressively disallowed by the standard and is undefined
          behaviour. Sorry for this potentially breaking change, but it was
          always wrong.

v4 2021-08-16

        * strong::affine_point<D> can now be defaulted as
          strong::affine_point<>, in which case a difference type will be
          generated using the same tag as the strong affine point type.

        * operator% is now conditionally supported for arithmetic types,
          provided that the underlying type supports the operation.

        * operator% is also conditionally supported for difference types,
          difference % difference => underlying type, and
          difference % underlying type => difference.

        * strong::difference is now strong::equality comparable in addition
          to being strong::ordered

v3 2021-08-02

        * increment/decrement operators are now hidden friends

        * swap() is now constexpr. Thanks Björn Schäpers @HazardyKnusperkeks
